Added the home summary and the CV page that shows a pdf file :rocket:

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="static/styles/main.css">
+        <title>{{ title }}</title>
+    </head>
+
+    <body>
+        <header>
+            <div id="logo">
+                <a href="/">
+                    <img src="static/img/me.jpg" alt="This is me">
+                </a>
+            </div>
+            <div id="title">
+                <h1>Aurelien Farges</h1>
+                <p>3rd year student in Software Development</p>
+            </div>
+        </header>
+
+        {% block body %}
+        {% endblock %}
+
+        <footer>
+            <p>© 2021 • Aurelien Farges</p>
+        </footer>
+
+    </body>
+
 </html>
