--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -3,6 +3,10 @@ html, body {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 header {
     z-index: 2;
     position: relative;
@@ -12,18 +16,21 @@ header {
     align-items: center;
     background: #5c9dd7;
     color: white;
+    width: 100%;
+    height: 20%;
 }
 
-header .logo {
-    margin: 2% 2% 0 -2%;
+header #logo {
+    margin: 1% 2% 1% -2%;
 }
 
-header .logo img {
-    width: 125px;
-    border-radius: 50%;
+header #logo a img {
+    width: 75px;
+    height: 150px;
+    border-radius: 10%;
 }
 
-header .title h1 {
+header #title h1 {
     font-family: sans-serif;
     font-size: 75px;
     margin: 2% 0 0 0;
@@ -31,7 +38,32 @@ header .title h1 {
     text-align: center;
 }
 
-header .title p {
+header #title p {
     font-family: sans-serif;
     margin: 0 0 20px 0;
+}
+
+footer {
+    position: absolute;
+    background: #5c9dd7;
+    z-index: 50;
+    text-align: center;
+    color: white;
+    bottom: 0;
+    height: 5%;
+    width: 100%;
+}
+
+#home-info, #about-info {
+    text-align: center;
+}
+
+#cv {
+    width: 100%;
+    height: 74.5%;
+    position: absolute;
+}
+
+#summary {
+
 }
