--- a/templates/home.html
+++ b/templates/home.html
@@ -5,11 +5,29 @@
         Here you can find every link redirecting to the different parts of my website.
     </h2>
 
+    <br>
+
     <ul id="summary">
-        <li><a href="/about">About me</a></li>
-        <li><a href="/cv">My CV</a></li>
-        <li><a href="/technologies">My favourite computing technologies</a></li>
-        <li><a href="/interests">My personal interests</a></li>
+        <li>
+            <a href="/about">
+                <h3>About me</h3>
+            </a>
+        </li>
+        <li>
+            <a href="/cv">
+                <h3>My CV</h3>
+            </a>
+        </li>
+        <li>
+            <a href="/technologies">
+                <h3>My favourite computing technologies</h3>
+            </a>
+        </li>
+        <li>
+            <a href="/interests">
+                <h3>My personal interests</h3>
+            </a>
+        </li>
     </ul>
 
 {% endblock %}
