Added a sub-route for the technologies

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -58,7 +58,7 @@ footer {
     width: 100%;
 }
 
-#home-info, #about-info {
+#home-info, #about-info, #tech-info-1, #tech-info-2 {
     text-align: center;
 }
 
