--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
             </a>
         </li>
         <li>
-            <a href="/technologies">
+            <a href="/technologies/1">
                 <h3>My favourite computing technologies</h3>
             </a>
         </li>
