--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="static/styles/main.css">
+        <link rel="stylesheet" href="/static/styles/main.css">
         <title>{{ title }}</title>
     </head>
 
@@ -9,7 +9,7 @@
         <header>
             <div id="logo">
                 <a href="/">
-                    <img src="static/img/me.jpg" alt="This is me">
+                    <img src="/static/img/me.jpg" alt="This is me">
                 </a>
             </div>
             <div id="title">
