--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <h2 id="home-info">
+    <h2 id="center">
         Here you can find every link redirecting to the different parts of my website.
     </h2>
 
@@ -26,6 +26,11 @@
         <li>
             <a href="/interests">
                 <h3>My personal interests</h3>
+            </a>
+        </li>
+        <li>
+            <a href="/comments">
+                <h3>Comments</h3>
             </a>
         </li>
     </ul>
