--- a/templates/technologies1.html
+++ b/templates/technologies1.html
@@ -2,10 +2,18 @@
 
 {% block body %}
 
-    <h2 id="tech-info-1">
-        First technology.
+    <h2 class="center">
+        Here are my favourite computing technologies.
     </h2>
 
+    <br>
 
+    <h3 class="tech-name center">JakartaEE (previously JavaEE)</h3>
+
+    <!--<br>
+
+    <form class="next-previous" action="/next" method="post">
+        <button class="next" name="next" onclick="nextTechnology()">Next >></button>
+    </form>-->
 
 {% endblock %}
