Done the comments page and the storage of the messages submitted :rocket:

--- a/templates/interests.html
+++ b/templates/interests.html
@@ -2,6 +2,12 @@
 
 {% block body %}
 
+    <h2 class="center">
+        Here are my interests outside of computers and programming in general.
+    </h2>
+
+    <br>
+
 
 
 {% endblock %}
