--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <h2 id="center">
+    <h2 class="center">
         Here you can find some informations about me.
     </h2>
 
