--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <h2 id="center">
+    <h2 class="center">
         Here you can find every link redirecting to the different parts of my website.
     </h2>
 
