--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,23 @@
 {% extends "base.html" %}
 
 {% block body %}
+
     <h2 class="center">
         Here you can find some informations about me.
     </h2>
 
+    <br><br>
 
+    <p class="center" id="me">
+        My name is Aurelien Farges, I'm 21 years old and I'm a French student in 3rd year of Software Development at IT Carlow.
+        <br>
+        I have started programming some things here and there since I was 13/14.
+        <br>
+        I started by learning Java (which is my favourite programming language) and the basics of web development (HTML and CSS) to try and make my own website.
+        <br>
+        My passion for programmation and computers in general led me to do a two-year degree in IT in my home country and now a third year here in Carlow.
+        <br>
+        I love learning new technologies and therefore I am really excited to learn everything about Python.
+    </p>
 
 {% endblock %}
