--- a/templates/interests.html
+++ b/templates/interests.html
@@ -6,8 +6,37 @@
         Here are my interests outside of computers and programming in general.
     </h2>
 
+    <br><br>
+
+    <p class="center" id="interests">
+        I don't really have much interests outside of computers and my course except for music.
+        <br>
+        Indeed I am a huge fan of music especially electronic music even though I listen to pretty much anything.
+        <br>
+        Here you have some of my favourite artists.
+    </p>
+
     <br>
 
-
+    <div id="artists">
+        <div>
+            <h3 class="center">Martin Garrix</h3>
+            <a href="https://martingarrix.com" target="_blank">
+                <img id="garrix" src="/static/img/garrix.jpg" alt="Martin Garrix">
+            </a>
+        </div>
+        <div>
+            <h3 class="center">David Guetta</h3>
+            <a href="https://davidguetta.com" target="_blank">
+                <img id="guetta" src="/static/img/guetta.jpg" alt="David Guetta">
+            </a>
+        </div>
+        <div>
+            <h3 class="center">The Chainsmokers</h3>
+            <a href="https://www.thechainsmokers.com" target="_blank">
+                <img id="chnsmkrs" src="/static/img/chainsmokers.jpg" alt="The Chainsmokers">
+            </a>
+        </div>
+    </div>
 
 {% endblock %}
